# brainvisa-dev

./: .gitmodules  README.md  activate.sh  pixi.toml
conf/: bv_maker.cfg
src/brainvisa-cmake/: .coveragerc  .gitignore  .gitrepo  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  debian-control.in  tox.ini
src/brainvisa-cmake/cmake/: CMakeLists.txt  Doxyfile.in  DoxyfileDefaultValues.cmake  brainvisa-cmake-config-version.cmake  brainvisa-cmake-config.cmake  brainvisa-compilation.cmake  brainvisa-find-components.cmake  compilation_info.py.in  conda.cmake  debian-control-dev.in  debian-control-run.in  findpysitepackages.py  packaging-deb.cmake  project_info.cmake
src/brainvisa-cmake/cmake/modules/: FindAgg.cmake  FindAlsa.cmake  FindBlitz.cmake  FindDCMTK.cmake  FindDLib.cmake  FindDocbook.cmake  FindDot.cmake  FindEnv.cmake  FindEpydoc.cmake  FindFontConfig.cmake  FindFop.cmake  FindFuse.cmake  FindGObject.cmake  FindGSL.cmake  FindGStreamer.cmake  FindGdkPixbuf.cmake  FindGio.cmake  FindGlib.cmake  FindHDF5.cmake  FindJpegXR.cmake  FindLIBGCC.cmake  FindLibAudio.cmake  FindLibBrotli.cmake  FindLibCairo.cmake  FindLibDoubleConversion.cmake  FindLibFFI.cmake  FindLibGFortran.cmake  FindLibGettext.cmake  FindLibGraphite2.cmake  FindLibHarfbuzz.cmake  FindLibHyphen.cmake  FindLibJbig.cmake  FindLibKDTree.cmake  FindLibLZMA.cmake  FindLibNifti.cmake  FindLibORC.cmake  FindLibPcre.cmake  FindLibPgm.cmake  FindLibQuadMath.cmake  FindLibSSL.cmake  (+45 more)
src/brainvisa-cmake/cmake/modules/test_programs/: minc_support_mgh.c  minc_support_mnc2.c  minc_support_nifti.c
src/brainvisa-cmake/cmake/specific/: linux.cmake
src/brainvisa-cmake/cmake/toolchains/i686-w64-mingw32/: init-cache.cmake  toolchain.cmake
src/brainvisa-cmake/cmake/toolchains/x86_64-w64-mingw32/: init-cache.cmake  toolchain.cmake
src/brainvisa-cmake/doc/sphinx/: bv_env.rst  bv_maker.rst  cmake_functions.rst  compile_existing.rst  conf.py  configuration.rst  dependencies.rst  documenting.rst  index.rst  new_project.rst  testing_monitoring.rst
src/brainvisa-cmake/doc/sphinx/sphinxext/numpy_ext/: docscrape_sphinx.py  numpydoc.py
src/brainvisa-cmake/doc/tutorial/: CMakeLists.txt  project_info.cmake
src/brainvisa-cmake/doc/tutorial/brainvisa/toolboxes/brainvisa-cmake_tutorial/processes/: brainvisa-cmake_tutorial.py
src/brainvisa-cmake/doc/tutorial/cmake/: brainvisa-cmake_tutorial-config.cmake.in
src/brainvisa-cmake/doc/tutorial/share/: brainvisa-cmake_tutorial.txt
src/brainvisa-cmake/doc/tutorial/src/: CMakeLists.txt
src/brainvisa-cmake/doc/tutorial/src/commands/: CMakeLists.txt
src/brainvisa-cmake/doc/tutorial/src/commands/test_brainvisa-cmake_tutorial/: test_brainvisa-cmake_tutorial.cc
src/brainvisa-cmake/doc/tutorial/src/sip/: CMakeLists.txt  brainvisa-cmake_tutorial.sip
src/brainvisa-cmake/etc/bash_completion.d/: bv_maker-completion.bash
src/brainvisa-cmake/python/brainvisa_cmake/: brainvisa_client_components.py  brainvisa_clients.py  brainvisa_projects.py  build.py  bv_dependencies_Ubuntu-16.04.json  bv_dependencies_Ubuntu-18.04.json  bv_dependencies_Ubuntu-20.04.json  commands.py  components_definition.py  configuration.py  environment.py  git.py  installer.py  main.py  output.py  path.py  release.py  singleton.py  sources.py  subprocess.py  svn.py  svn_to_git.py  utils.py  version.py  version_number.py
src/brainvisa-cmake/python/brainvisa_cmake/build_models/: __init__.py  pure_python.py
src/brainvisa-cmake/python/brainvisa_cmake/tests/: test_path.py
src/brainvisa-cmake/release/: README  bv_create_release_branches  bv_tag_release
src/brainvisa-cmake/scripts/: cleanDependencyGraph.py
src/brainvisa-cmake/share/: pyproject.toml.in
src/brainvisa-cmake/tests/: test_bv_maker.py  test_bv_maker_git.py
src/populse_db/: .gitrepo
